# docsifer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  ci.yml  githubhfsync.yaml
docsifer/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
docsifer/analytics/: __init__.py  periods.py  service.py  store.py
docsifer/api/: deps.py  error_handlers.py  middleware.py  schemas.py
docsifer/api/v1/: __init__.py  convert.py  health.py  stats.py
docsifer/core/: __init__.py  html_cleaner.py  llm_registry.py  mime.py  service.py  tokenizer.py  url_guard.py
docsifer/safety/: __init__.py  circuit_breaker.py  conversion_gate.py  disk_cleanup.py  memory_watchdog.py  per_ip_limiter.py  resource_guard.py
docsifer/ui/: __init__.py  gradio_app.py
tests/: conftest.py
tests/integration/: test_convert.py  test_health.py  test_url_ssrf.py
tests/unit/: test_analytics_service.py  test_html_cleaner.py  test_llm_registry.py  test_periods.py  test_safety.py  test_tokenizer.py  test_url_guard.py
